# DSA_Practice_problems

./: CMakeLists.txt  OOP.cpp
Arrays_1/: Buy&SellStocks.cpp  NextPermutation.cpp  SetMatrixZeros.cpp  SetMatrixZeros_1.cpp  SetMatrixZeros_2.cpp  SetMatrixZeros_3.cpp
Arrays_1/MaxSubArray/: MaxSubArray_1.cpp  MaxSubArray_2.cpp
Arrays_1/PascalsTriangle/: PascalsTriangle_1.cpp
Arrays_1/SetMatrixZero/: SetMatrixZeros_1.cpp
Arrays_1/SortColours/: SortColours_1.cpp  SortColours_2.cpp
Arrays_2/: FindDuplicate.cpp  MajorityElement.cpp  MergeIntervals.cpp  MergeSortedArray.cpp  MissingRepeatedValues.cpp  RotateMatrix.cpp
Arrays_3/: PowFunction.cpp  UniquePaths.cpp
Arrays_3/Binary2D/: BinarySearch.cpp  Flattening2DMatrix.cpp  MajorityElementn3.cpp  Search2DMatrix.cpp
Arrays_3/Binary2D/MergeSort(ReverseCount)/: ReverseCount.cpp
Arrays_3/MergeSort(ReverseCount)/: MergeSort.cpp
Arrays_4/: 2_sum.cpp  3sum.cpp  4sum.cpp  LongestConsecutiveSequence.cpp  LongestSSwoRepeats.cpp
Arrays_4/SubArraySum/: SubArraySum_brute.cpp  SubArraySum_optimal.cpp
Binary Search/: BookAllocation,Painter(IMP).cpp  FindNonDuplicate(sorted).cpp  KokoEatingBanana.cpp  RotatedSortedArrayDuplicates.cpp  SearchInRotatedSortedArray.cpp  ShippinginDdays.cpp  findSQRT.cpp  upper&lowerbound.cpp
CF1029(Div 3)/: 1029A.cpp  1029B.cpp
CodeForce Contests/: A.cpp  B.cpp  c.cpp
CodeForce Contests/CF1032(Div 3)/: 1032A.cpp  1032B.cpp  1032C.cpp
CodeForce Contests/Virtual/: 1016A.cpp
CodeForce Contests/div3 1047/: 1047A.cpp  1047B.cpp  1047C.cpp
Dynamic Programming/1-d/: HouseRobbers2.cpp
Dynamic Programming/2-d/: MinimumFallingSum.cpp  MinimumPathSum.cpp  UniquePathsII.cpp
Dynamic Programming/subsequences/: CoinChange .cpp
Graphs/: FindCycleDFS.cpp  SurroundedRegions(dfs).cpp  bfs.cpp  countDisconnectedGraphs .cpp  dfs.cpp
Heaps/: TopKFreq.cpp
Linked Lists + Arrays/: MaxConsecutiveOnes.cpp  RemoveDuplicatesFromSorted.cpp  RotateLinkedList.cpp
Linked Lists + Arrays/Rainwater Trapping/: RainwaterTrapping_Brute.cpp  RainwaterTrapping_Optimal.cpp
LinkedList1/: AddNumbersLL.cpp  DeleteKthFromEnd.cpp  DeleteNodeLL.cpp  MergeSortedLL.cpp  MiddleLL.cpp  ReverseLL.cpp
LinkedList2/: DetectLoopLL.cpp  FlattenLL.cpp  LinkedListCycle.cpp  PalindromeLL.cpp  ReverseNodesinKthGroup.cpp
LinkedList2/IntersectionOfLL/: IntersectionOfLL.cpp  Intersection_optimal.cpp
Recurrsion/: AllBinarySubstrings.cpp  CombinationSumI.cpp  CombinationSumII.cpp  CombinationSumIII.cpp  CountGoodArrays.cpp  PalindromeSubstr(VIMP).cpp  Permutations.cpp  SubsetsII.cpp  SudokuSolver.cpp
SlidingWindow+2pointer/: BinarySubArrayswSum.cpp  FrontAndBackCards.cpp  FruitsInaBasket.cpp  KdifferentIntegers.cpp  MaxNumberOf1s,3.cpp  NiceSubarrays.cpp  containsABC.cpp
SlidingWindow+2pointer/LongestCharacterReplacement/: LongestCharReplacement_brute.cpp  LongestCharReplacement_optimal.cpp
Stack&Queue/: LargestRectangeInHistogram.cpp  SumOfMinimums(vimp).cpp  SumOfRanges.cpp
String/: OneisRotationOfOther.cpp  RemoveOuterBrackets.cpp  ReverseWords.cpp  SortByFrequency.cpp
